# AXONHIS

./: .env.example  .gitignore  ABHAY_SIR_USER_GUIDE.md  AxonHIS_Enhanced_Blueprint_v3 (1).docx  CLAUDE.md  CLINICAL_ENCOUNTER_FLOW_TESTING_GUIDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CURRENT_FEATURES_AND_TOOLS.md  E2E_TESTING_GUIDE.md  MANUAL_UI_TEST_GUIDE.md  Makefile  README.md  apply_inventory_alter.sql  comprehensive_e2e_test_suite.py  debug_qa.py  docker-compose.yml  e2e_emr_test.py  e2e_er_test.py  e2e_final.txt  e2e_full_platform_test.py  e2e_out.txt  e2e_output.txt  e2e_tester.py  fast_massive_translator.py  fast_translator.py  fix_docdesk.py  fix_encounters.py  fix_global_nav_native.py  fix_ipd_native.py  fix_missing_components_offline.py  fix_missing_locales.py  fix_nav_i18n.py  fix_ot_locales.py  fix_portal_hash.sh  fix_sidebar_missing_items.py  full_localize.py  full_localize_ipd.py  i18n_validator.py  massive_translator.py  opd_tables.sql  (+25 more)
backend/: Dockerfile  add_clinical_org_id.py  add_org_id_columns.py  alembic.ini  audit_results.json  audit_results_v2.json  check_tables.py  clear_analytics.py  comprehensive_audit.py  comprehensive_test_results.json  create_acc.py  create_advanced_lab_tables.py  create_nursing_tables.py  create_qa_tables.py  debug_adv.py  debug_adv2.py  e2e_axonhis_md_test.py  e2e_crud_full_test.py  e2e_test_results.json  fix_pharmacy.py  fix_pw_native.py  fix_user.py  gen_pass.py  pyproject.toml  render.yaml  seed_account.py  seed_accounting.py  seed_advanced_lab.py  seed_api.py  seed_diagnostics.py  seed_doctor.py  seed_kiosk.py  seed_lab.py  seed_linen.py  seed_ot.py  seed_patient_dashboard.py  seed_pharmacy.py  seed_pharmacy_2.py  seed_portal_data.py  seed_procurement.py  (+20 more)
(+1112 files in other folders)
