[tool.poetry]
name = "axonhis-backend"
version = "0.1.0"
description = "AXONHIS – AI-First Hospital Information System Backend"
authors = ["Whispering Palms Tech Hub"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = { version = "^2.7.0", extras = ["email"] }
pydantic-settings = "^2.3.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.9"
celery = { version = "^5.4.0", extras = ["redis"] }
redis = "^5.0.0"
httpx = "^0.27.0"
openai = "^1.35.0"
psutil = "^5.9.8"
google-cloud-speech = "^2.21.0"
google-cloud-storage = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
types-passlib = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/migrations/*"]
